// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldsAutoComplete Additional options merged in 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="autoComplete1"
    >
      Options
    </label>
    <div
      className="components-base-control caldera-field caldera-field-autocomplete"
    >
      <div
        className="components-base-control__field"
      >
        <input
          className="components-text-control__input"
          id="autoComplete1"
          onChange={[Function]}
          suggestions={
            Array [
              "f",
              "y",
              "%selectFieldId%",
              "Select Field Label",
              "%checkboxFieldLabel%",
              "Checkbox Labe",
            ]
          }
          type="text"
          value={
            Array [
              "One",
              "Three",
            ]
          }
        />
      </div>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;

exports[`FormFieldsAutoComplete Matches snapshot 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="autoComplete1"
    >
      Options
    </label>
    <div
      className="components-base-control caldera-field caldera-field-autocomplete"
    >
      <div
        className="components-base-control__field"
      >
        <input
          className="components-text-control__input"
          id="autoComplete1"
          onChange={[Function]}
          suggestions={
            Array [
              "%selectFieldId%",
              "Select Field Label",
              "%checkboxFieldLabel%",
              "Checkbox Labe",
            ]
          }
          type="text"
          value={
            Array [
              "One",
              "Three",
            ]
          }
        />
      </div>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;
